# sqltok

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  RUNBOOK.md  blog.html  blog.xml  index.html  listings.json  pyproject.toml  robots.txt  search.json  sitemap.xml
.claude/skills/social-publish/: SKILL.md  platforms.md  style_guide.md
.claude/skills/social-publish/examples/: bluesky.txt  mastodon.txt  reddit_localllama.txt  show_hn.txt  x_thread.txt
.claude/skills/social-publish/scripts/: lint_post.py  publish.py
.github/workflows/: ci.yml  claude-code-review.yml  publish.yml  site.yml  social-post.yml
benchmarks/: README.md  RESULTS.md  download.sh  eval_recall.py  make_sample_data.py  run_bird.py
benchmarks/llm/: __init__.py  anthropic_client.py  base.py  mock.py  ollama_client.py  openai_client.py
benchmarks/sample_data/: questions.json
benchmarks/sample_data/dev_databases/retail/: retail.sqlite
benchmarks/sample_data/dev_databases/school/: school.sqlite
demo/: README.md  app.py  requirements.txt
docs/: rust-rewrite-plan.md
docs/blog/: visual-guide-to-sqltok.md
posts/visual-guide-to-sqltok/: index.html
site/: _quarto.yml  blog.qmd  index.qmd  styles.scss
site/posts/: _metadata.yml
site/posts/visual-guide-to-sqltok/: index.qmd
site_libs/bootstrap/: bootstrap-0033c05cec4087f1ca87237a622be68a.min.css
sqltok/: __init__.py  budget.py  context.py  ddl.py  introspect.py  manager.py  models.py  retrieval.py  tokenizer.py
sqltok/grounding/: __init__.py  affinity.py  lsh.py  minhash.py  text.py
sqltok/select/: __init__.py  base.py  connect.py  coverage.py  greedy.py  stubs.py
tests/: conftest.py  test_budget.py  test_connectivity.py  test_coverage.py  test_ddl.py  test_fk_expansion.py  test_fuzz_ddl.py  test_grounding.py  test_property.py  test_ranking.py  test_regression.py  test_scale.py  test_statistical.py
